--- a/recipes/carrotcake.html
+++ b/recipes/carrotcake.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1></h1>
-    <a href="recipes/carrotcake.html">Carrot Cake Recipe</a>
+    <h1>Carrot Cake Recipe</h1>
+    <a href="../index.html">Home</a>
 </body>
 </html>
