--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1></h1>
-    <a href="recipes/carrotcake.html">Carrot Cake Recipe</a>
+    <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/carrotcake.html">Carrot Cake</a></li>
+        <li><a href="recipes/chickenrice.html">Chicken Rice</a></li>
+        <li><a href="recipes/WantonMee.html">Wanton Mee</a></li>
+    </ul>
 </body>
 </html>
