Add 3 recipes and 3 images

--- a/recipes/carrotcake.html
+++ b/recipes/carrotcake.html
@@ -7,6 +7,21 @@
 </head>
 <body>
     <h1>Carrot Cake Recipe</h1>
+    <img src="../images/Carrot_Cake.jpg">
+    <h2>Description</h2>
+    <p>This is a recipe for Chinese Carrot Cake. In colloquial terms, it is known as "Chai Tow Kway"</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Radish Cake </li>
+        <li>Eggs</li>
+        <li>Preserved Radish</li>
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+        <li>Bring 480 gr water to a boil. Add daikon and lower the heat to simmer and cover and cook for 5 minutes until daikon is soft. Take the daikon out. Measure out 480 gr of liquid and discard the rest</li>
+        <li>While daikon is cooking, mix rice flour, cornstarch, tapioca starch, salt with 220 gr of water in a large wok or skillet.</li>
+        <li>Stir until you get a smooth batter. Don’t turn on the heat yet. We’re still waiting for the daikon to cook</li>
+    </ol>
     <a href="../index.html">Home</a>
 </body>
 </html>
